cmake_minimum_required(VERSION 2.8)

PROJECT(CPPWRAPPERS)

SET(LIB_NAME cppwrappers)

FILE(GLOB SOURCE_FS Fs/*.cpp)
FILE(GLOB SOURCE_NET Net/*.cpp)
FILE(GLOB SOURCE_SYS System/*.cpp)

FILE(GLOB HEADERS_FS  Include/Fs/*.h)
FILE(GLOB HEADERS_NET Include/Net/*.h)
FILE(GLOB HEADERS_SYS Include/System/*.h)

INCLUDE_DIRECTORIES(Include)

ADD_LIBRARY(
	${LIB_NAME}
	SHARED
	${SOURCE_FS}
	${SOURCE_NET}
	${SOURCE_SYS}
)

FIND_PACKAGE (Threads)
target_link_libraries (${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

#Installation of the library
INSTALL(TARGETS ${LIB_NAME}
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)


SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS_FS}")

#Installation of the headers
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/Fs
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)


SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS_SYS}")

#Installation of the headers
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/System
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)


SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS_NET}")

#Installation of the headers
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/Net
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
