cmake_minimum_required(VERSION 2.8)

PROJECT(LIBFSCPP)

SET(LIB_NAME fscpp)

INCLUDE_DIRECTORIES(../Include )

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/Fs/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)


SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")

#Installation of the library
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/Fs
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
