cmake_minimum_required(VERSION 2.8)

PROJECT(LIBNETCPP)

SET(LIB_NAME netcpp)

INCLUDE_DIRECTORIES(../Include )

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/Net/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)

target_link_libraries (${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")

#Installation of the library
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/Net
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
