cmake_minimum_required(VERSION 2.8)

PROJECT(LIBSOCKETCPP)

SET(LIB_NAME socketcpp)
SET(INSTALL_PATH /usr)
SET(HEADERS_INSTALL_PATH ${INSTALL_PATH}/include/Socket)
SET(LIB_INSTALL_PATH ${INSTALL_PATH}/lib)

INCLUDE_DIRECTORIES(../Include )

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/Socket/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)

#Installation of the headers
INSTALL(
	FILES
	${HEADERS}
	DESTINATION ${HEADERS_INSTALL_PATH}
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

#Installation of the library
INSTALL(
	TARGETS
	${LIB_NAME}
	DESTINATION ${LIB_INSTALL_PATH}
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
