cmake_minimum_required(VERSION 2.8)

PROJECT(LIBSOCKETCPP)

SET(LIB_NAME socketcpp)

INCLUDE_DIRECTORIES(../Include )

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/Socket/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)
FIND_PACKAGE (Threads)
target_link_libraries (${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")

#Installation of the library
INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/Socket
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
