cmake_minimum_required(VERSION 2.8)

PROJECT(LIBSYSTEMCPP)

SET(LIB_NAME systemcpp)
SET(INSTALL_PATH /usr)
SET(HEADERS_INSTALL_PATH ${INSTALL_PATH}/include/System)
SET(LIB_INSTALL_PATH ${INSTALL_PATH}/lib)

INCLUDE_DIRECTORIES(../Include)

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/System/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)

#Installation of the headers
INSTALL(
	FILES
	${HEADERS}
	DESTINATION ${HEADERS_INSTALL_PATH}
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

FIND_PACKAGE (Threads)
target_link_libraries (${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

#Installation of the library
INSTALL(
	TARGETS
	${LIB_NAME}
	DESTINATION ${LIB_INSTALL_PATH}
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
