cmake_minimum_required(VERSION 2.8)

PROJECT(LIBSYSTEMCPP)

SET(LIB_NAME systemcpp)

INCLUDE_DIRECTORIES(../Include)

FILE(GLOB SOURCES  *.cpp)

FILE(GLOB HEADERS ../Include/System/*.h)

ADD_LIBRARY(
	${LIB_NAME} 
	SHARED
	${SOURCES}
)


FIND_PACKAGE (Threads)
target_link_libraries (${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")

INSTALL(TARGETS ${LIB_NAME}
	PUBLIC_HEADER DESTINATION include/System
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
